fix: update endpoint
